@@ -1,3 +1,10 @@
+2011-09-13  Nick Alcock  <nick.alcock@oracle.com>
+
+	* runtest.sh: Provide coverage tracing of module initialization
+	and shutdown too.
+	* test/modules: Add dtrace now that we are unloading and cannot
+	rely on module dependency chasing.
+
 2011-09-12  Nick Alcock  <nick.alcock@oracle.com>
 
 	* runtest.sh: Introduce quiet mode, producing minimal output.
